# offsec-challenge-v2

./: README.md  main.py  pyproject.toml
agents/: mono_agent.py
configs/: settings.py
tools/: ldap_core.py  ldap_tools.py  tool_registry.py
